Temp First myApp First Commit

--- a/Day2_AngularProjectExample/package.json
+++ b/Day2_AngularProjectExample/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
     "jQuery": "^1.7.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
